<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- main app strings -->
    <string name="app_name">MediSync</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty">No Items</string>
    <string name="image_base_url">https://raw.github.com/android/platform_frameworks_base/master/core/res/res/drawable-%1$s/%2$s.png</string>
    <string name="action_add">Add</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="service_not_available">Service not available</string>
    <string name="app_start">app start</string>

    <!-- data menu -->
    <string name="menu_data">Data</string>
    <string name="menu_data_patient_profile">Patient profile</string>
    <string name="menu_data_hospital_staff">Hospital staff</string>
    <string name="menu_data_xray_results">Imagery</string>
    <string name="menu_data_lab_results">Lab results</string>
    <string name="menu_data_medical_supplies_index">Medical supplies</string>
    <string name="menu_data_hospital_forms_index">Hospital forms</string>
    <string name="menu_data_prescriptions_index">Prescriptions</string>
    <string name="menu_data_illness_index">Illness index</string>
    <string name="menu_data_drugs_index">Drugs index</string>
    <string name="menu_data_hospital_interactive_map">Hospital map</string>
    <!-- tools menu -->
    <string name="menu_tools">Tools</string>
    <string name="menu_tools_ecg">ECG</string>
    <string name="menu_tools_pulse">Pulse</string>
    <string name="menu_tools_microscope_feed">Endoscope</string>
    <string name="menu_tools_blood_pressure">Blood pressure</string>
    <string name="menu_tools_temperature">Body Temperature</string>
    <string name="menu_tools_radiation_levels">Radiation levels</string>
    <string name="menu_tools_biohazard_alerts">Biohazard alerts</string>
    <string name="menu_tools_movement_log">Movement logger</string>

    <!-- emergency menu -->
    <string name="menu_emergency">Emergency</string>
    <string name="menu_emergency_call_ambulance">Call ambulance</string>
    <string name="menu_emergency_call_helicopter">Call helicopter</string>
    <string name="menu_emergency_call_nurse">Call nurse</string>
    <string name="menu_emergency_call_doctor">Call doctor</string>
    <!-- drawable list string naming stop -->
    <!-- action buttons -->
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_save_image">Save image</string>
    <string name="action_view_image">View image</string>
    <string name="action_search_database">Search Database</string>
    <string name="action_scan_qr_code">Scan QR code</string>

    <!-- BluetoothChat -->
    <string name="hello">Hello World, ArduinoBTComActivity!</string>
    <string name="edittext_hint">Enter text to send to Arduino</string>
    <string name="button_send">Send</string>
    <string name="bt_not_available">Bluetooth is not available</string>
    <string name="bt_enabled">Bluetooth enabled</string>
    <string name="bt_not_enabled_leaving">Bluetooth not enabled</string>
    <string name="connect">connect</string>
    <string name="connecting">connecting</string>
    <string name="connected">connected</string>
    <string name="not_connected">not connected</string>

    <!-- Options Menu -->
    <string name="connection">Connection</string>
    <string name="scan_connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="discoverable">Discoverable</string>

    <!-- DeviceListActivity -->
    <string name="scanning">Scanning for devices&#8230;</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pulse_measurement">Pulse measurement</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- map related  stuff -->

    <string name="app_description">        Displays current address and current or updated location using Location Services</string>

    <!-- User interface labels and strings -->


    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Menu title -->
    <string name="action_settings">Settings</string>

    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>

    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">        Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">        Location update error. code %1$d message %2$s</string>
    <string name="location_update_missing_update">        Location update error. No incoming location.</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">        Can\'t request location updates, previous request hasn\'t finished</string>
    <string name="start_updates">Updates ON</string>
    <string name="stop_updates">Updates OFF</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>
    <!-- patient profile db -->
    <string name="hello">Hello World, Todo!</string>
    <string name="no_todos">Currently there are no Todo items maintained</string>
    <string name="menu_insert">Add Item</string>
    <string name="menu_delete">Delete Todo</string>
    <string name="todo_summary">Summary</string>
    <string name="todo_description">Delete Todo</string>
    <string name="todo_edit_summary">Summary</string>
    <string name="todo_edit_description">Description</string>
    <string name="todo_edit_confirm">Confirm</string>

</resources>