<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_print"
        android:icon="@drawable/print"
        android:showAsAction="always"
        android:title="Print"/>
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/action_map"
        android:showAsAction="always"
        android:title="Map"/>
    <item
        android:id="@+id/action_bt"
        android:icon="@drawable/action_bluetooth"
        android:showAsAction="always"
        android:title="Bluetooth"/>
    <item
        android:id="@+id/action_qrscan"
        android:icon="@drawable/action_qrscan"
        android:showAsAction="always"
        android:title="@string/action_scan_qr_code"/>
    <item
        android:id="@+id/action_filepicker_save"
        android:icon="@drawable/action_filepicker_save"
        android:showAsAction="ifRoom"
        android:title="@string/action_save_image"/>
    <item
        android:id="@+id/action_filepicker_view"
        android:icon="@android:drawable/ic_menu_view"
        android:showAsAction="ifRoom"
        android:title="@string/action_view_image"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/action_websearch"
                android:icon="@drawable/action_search"
                android:showAsAction="ifRoom"
                android:title="@string/action_search_database"/>
            <item
                android:id="@+id/action_save"
                android:icon="@drawable/ic_save"
                android:orderInCategory="100"
                android:showAsAction="ifRoom"
                android:title="@string/action_save"/>
        </menu>
    </item>

</menu>