<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2012 Joe Smallman

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/connection"
        android:showAsAction="ifRoom|withText"
        android:title="@string/connection">
        <menu>
            <item
                android:id="@+id/scan_connect"
                android:icon="@drawable/action_bt_connect"
                android:showAsAction="ifRoom|withText"
                android:title="@string/scan_connect"/>
            <item
                android:id="@+id/disconnect"
                android:icon="@drawable/action_bt_disconnect"
                android:showAsAction="ifRoom|withText"
                android:title="@string/disconnect"/>
            <item
                android:id="@+id/discoverable"
                android:icon="@android:drawable/ic_menu_mylocation"
                android:showAsAction="ifRoom|withText"
                android:title="@string/discoverable"/>
        </menu>
    </item>

</menu>